syntax = "proto3";

option java_multiple_files = true;
package external.service;

service ExternalService {
  rpc invokeExternal(RequestMessage) returns (ResponseMessage);
}

message RequestMessage {
  string message = 1;
  bool flag = 2;
  int64 count = 3;
}

message ResponseMessage {
  bool status = 1;
  optional string content = 2;
}